--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -438,3 +438,4 @@
 @icon-hud-findpattern-simple:       url("@{icon-hud-url-prefix}quotes-right3.svg@{icon-hud-url-suffix}");
 @icon-hud-findpattern-wildcard:     url("@{icon-hud-url-prefix}power.svg@{icon-hud-url-suffix}");
 @icon-hud-findpattern-regex:        url("@{icon-hud-url-prefix}ko_regexp.svg@{icon-hud-url-suffix}");
+@icon-hud-crumb-arrow:              url("@{icon-hud-url-prefix}arrow-right3.svg@{icon-hud-url-suffix}");
