Skin: The UI for Komodo on OSX has been overhauled to fit the latest OSX release (Yosemite) rn=
(integrated from master branch change b4a4ffe by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/_config/panes.less
+++ b/src/chrome/komodo/skin/plat/mac/_config/panes.less
@@ -4,7 +4,7 @@
 @panel-label-weight:                    bold;
 @panel-label-transform:                 uppercase;
 @panel-label-shadow:                    rgba(255,255,255,0.5) 1px 1px 0px;
-@panel-label-font:                      "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+@panel-label-font:                      "Helvetica Neue", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 
 @panel-separator-shadow:                0px 1px 5px rgba(0,0,0,0.15);
 
