--- a/src/chrome/komodo/skin/plat/mac/_config/window.less
+++ b/src/chrome/komodo/skin/plat/mac/_config/window.less
@@ -1,21 +1,21 @@
 @import url("chrome://komodo/skin/plat/shared/_config/window.less");
 
-@panel-border-color:                    #929293;
+@panel-border-color:                    #ACACAC;
 @panel-border:                          1px solid @panel-border-color;
 
-@sidebar-background:                    -moz-linear-gradient(-90deg , rgb(231,236,241) 0%, rgb(208,216,224) 500px);
+@sidebar-background:                    none;
 @sidebar-inactive-background:           #EBEBEB !important;
 @sidebar-splitter-color:                @panel-border-color;
 
-@main-border-color:                     #abacad;
-@main-border-color-inactive:            #CCCCCC;
+@main-border-color:                     #C4C4C4;
+@main-border-color-inactive:            #C4C4C4;
 @main-border:                           1px solid @main-border-color;
 @main-border-inactive:                  1px solid @main-border-color-inactive;
 
 @statusbar-appearance:                  statusbar;
 @statusbar-background:                  disabled;
 @statusbar-text-color:                  #4f4f4f;
-@statusbar-font:                        "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+@statusbar-font:                        "Helvetica Neue", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 @statusbar-font-size:                   inherit;
 @statusbar-border-width:                disabled;
 @statusbar-border-style:                disabled;
