--- a/src/chrome/komodo/skin/plat/shared/_config/toolbars.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/toolbars.less
@@ -11,6 +11,7 @@
 @main-toolbox-group-border-width:            0 1px 0 0;
 @main-toolbox-group-border-style:            solid;
 @main-toolbox-group-border-color:            rgba(0,0,0, 0.15);
+@main-toolbox-group-shadow:                  disabled;
 
 @main-toolbox-button-first-border-width:     0;
 @main-toolbox-button-last-border-width:      0;
