--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -973,7 +973,8 @@ statusbar .menu-icon
 
 .close-button,
 #tabs-closebutton,
-.tabs-closebutton
+.tabs-closebutton,
+.tab-close-button
 {
     list-style-image: @icon-close;
 }
