--- a/src/chrome/komodo/skin/plat/shared/panes.less
+++ b/src/chrome/komodo/skin/plat/shared/panes.less
@@ -62,6 +62,7 @@ ko-pane tabpanels
 
 #workspace_left_area, #workspace_right_area
 {
+    -moz-appearance: -moz-mac-vibrancy-light !important;
     background: @sidebar-background;
 
     &:-moz-window-inactive
