--- a/src/chrome/komodo/skin/plat/shared/toolbars.less
+++ b/src/chrome/komodo/skin/plat/shared/toolbars.less
@@ -11,7 +11,9 @@
 {
 
     .border(@main-toolbox-group-border-width, @main-toolbox-group-border-style, @main-toolbox-group-border-color);
+    box-shadow: @main-toolbox-group-shadow;
     height: 24px;
+    margin: 0 3px;
     
     toolbarbutton
     {
