--- a/src/chrome/komodo/skin/plat/shared/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/tabs.less
@@ -9,6 +9,7 @@
 @tab-box-border-icons:                  1px solid rgba(0,0,0,0.15);
 @tab-box-content-background-color:      rgba(255,255,255,0.2);
 @tab-box-content-color:                 disabled;
+@tab-box-background-inactive:           disabled;
 
 @tab-font:                              disabled;
 @tab-font-size:                         disabled;
@@ -29,6 +30,7 @@
 @tab-border-top:                        disabled;
 @tab-transition:                        none;
 @tab-background:                        disabled;
+@tab-background-inactive:               disabled;
 @tab-background-vertical:               disabled;
 @tab-box-shadow-vertical:               none;
 @tab-spacer-border:                     disabled;
@@ -36,6 +38,7 @@
 @tab-selected-border:                   @tab-border;
 @tab-selected-border-top:               disabled;
 @tab-selected-background:               @tab-background;
+@tab-selected-background-inactive:      disabled;
 @tab-selected-box-shadow:               0px 0px 5px rgba(0, 0, 0, 0.35);
 @tab-selected-color:                    disabled;
 @tab-selected-background-vertical:      @tab-background-vertical;
