Icons: Dont use "selected" state for the overflow button
(integrated from master branch change 65c0020 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -180,7 +180,7 @@
 @icon-next-diff:                url("@{icon-url-prefix}arrow-down16.svg@{icon-url-suffix}");
 @icon-reveal-in-editor:         url("@{icon-url-prefix}file.svg@{icon-url-suffix}");
 @icon-move-to-editor:           url("@{icon-url-prefix}file-upload2.svg@{icon-url-suffix}");
-@icon-toolbar-overflow:         url("@{icon-selected-url-prefix}arrow-right3.svg@{icon-selected-url-suffix}");
+@icon-toolbar-overflow:         url("@{icon-url-prefix}arrow-right3.svg@{icon-url-suffix}");
 
 /* Toolbars - Standard */
 @icon-toolbar-back:             url("@{icon-toolbar-url-prefix}arrow-left3.svg@{icon-toolbar-url-suffix}");
