Skin: Tweak statusbar text on OSX and HUD
(integrated from master branch change bd71037 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/window.less
+++ b/src/chrome/komodo/skin/plat/mac/window.less
@@ -17,3 +17,9 @@ statusbar.bottombar > statusbarpanel
     -moz-appearance: statusbarpanel;
     background: inherit;
 }
+
+statusbar,
+statusbar toolbarbutton
+{
+    text-shadow: none !important;
+}
