--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -194,7 +194,7 @@ statusbar#statusbarviewbox
     -moz-appearance: none !important;
     background: @_background !important;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)) !important;
-    color: @foreground !important;
+    color: fade(@foreground, 80%) !important;
     border: 0 !important;
     border-top: 1px solid contrast(@_background, darken(@_background, 10%), lighten(@_background, 10%)) !important;
 
@@ -215,7 +215,7 @@ statusbar#statusbarviewbox
     {
         -moz-appearance: none !important;
         background: transparent;
-        color: @foreground !important;
+        color: fade(@foreground, 80%) !important;
         border: 0;
         border-radius: 0 !important;
 
@@ -224,7 +224,7 @@ statusbar#statusbarviewbox
 
         & > label
         {
-            color: @foreground !important;
+            color: fade(@foreground, 80%) !important;
         }
 
         &:hover
