Commando: Dont show loader at all when its not needed (caused visual glitches on OSX)
(integrated from master branch change 9f92bd6 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -70,6 +70,7 @@
         width: 100%;
         opacity: 0;
         transition: opacity 0.2s linear;
+        visibility: collapse;
     }
 
     &:not(.kitt) #commando-loader
@@ -89,6 +90,7 @@
     &.loading #commando-loader
     {
         opacity: 1.0;
+        visibility: visible;
     }
 
     @keyframes loading {
