--- a/src/chrome/komodo/skin/plat/shared/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/tabs.less
@@ -10,6 +10,7 @@
 @tab-box-content-background-color:      rgba(255,255,255,0.2);
 @tab-box-content-color:                 disabled;
 @tab-box-background-inactive:           disabled;
+@tab-box-background-icons-inactive:     disabled;
 
 @tab-font:                              disabled;
 @tab-font-size:                         disabled;
