--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -34,7 +34,7 @@
     @background-input:      darken(@background-contrast, 10%);
     @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
     @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
-    @background-selected:   desaturate(@special, 5%);
+    @background-selected:   fade(desaturate(@special, 5%), 60%);
     
     @background-scrollbar:          @background;
     @background-scrollbar-thumb:    darken(@background, 12%);
