Skin: Disable statusbar gradient on OSX
(integrated from master branch change c2624e3 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/window.less
+++ b/src/chrome/komodo/skin/plat/mac/window.less
@@ -23,3 +23,8 @@ statusbar toolbarbutton
 {
     text-shadow: none !important;
 }
+
+statusbar#statusbarviewbox
+{
+    background-image: none !important;
+}
