skin: Remove old editor scrollbar skinning, only use scheme-skinning for editor scrollbars
(integrated from master branch change cb25824 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -159,6 +159,16 @@ scintilla scrollbar
         -moz-appearance: none !important;
         background: @background-scrollbar-thumb-hover !important;
     }
+    
+    &[orient="horizontal"] thumb
+    {
+        min-width: 25px;
+    }
+
+    &[orient="vertical"] thumb
+    {
+        min-height: 25px;
+    }
 
     &:hover
     {
