fix: Icons: Size and folder icons on OSX were wrong
(integrated from master branch change aff7332 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -119,8 +119,13 @@
             {
                 visibility: collapse;
             }
+            
+            .menulist-icon
+            {
+                width: 16px;
+            }
         }
-
+        
         menuitem .menu-iconic-left
         {
             visibility: visible;
@@ -157,6 +162,7 @@
                 width: 16px;
                 height: 16px;
                 max-height: 16px;
+                background-size: 16px 16px;
             }
 
             .entry-wrapper
