--- a/src/modules/gtk_numix/skin/tabs.less
+++ b/src/modules/gtk_numix/skin/tabs.less
@@ -1,6 +1,6 @@
 @import url("chrome://komodo/skin/plat/current/tabs.less");
 
-tabs:not(.tabs-bottom)
+view tabs:not(.tabs-bottom)
 {
     .tabstrip-box
     {
@@ -10,7 +10,7 @@ tabs:not(.tabs-bottom)
     tab
     {
         border-width: 0 1px 0 1px !important;
-        padding: 6px;
+        padding: 4px;
 
         &[selected]
         {
