fix: Skin: Don't draw separator on pref window (redundant and ugly)
(integrated from master branch change 5f5acc9 by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -552,6 +552,13 @@ richlistbox { .list-styling.richlistbox(listbox); }
     border: @list-listbox-border;
 }
 
+#pref-deck-vbox + splitter
+{
+    -moz-appearance: none !important;
+    border: 0;
+    background: transparent;
+}
+
 /* Unified Menu */
 
 #unifiedMenuPrimaryPane, #unifiedMenuSecondaryPane
