fix: Commando: Remove default dropmarker styling on Windows
(integrated from master branch change 871961a by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -126,6 +126,13 @@
             }
         }
         
+        .menulist-dropmarker
+        {
+            background: transparent;
+            border: 0;
+            padding: 0;
+        }
+        
         menuitem .menu-iconic-left
         {
             visibility: visible;
