--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -3,6 +3,7 @@
 .setVars() when (@dark = 1)
 {
     @_background:           lighten(@background, 5%);
+    @background-primary:    darken(@background, 2%);
     
     @foreground-focus:      lighten(@foreground, 20%);
     @background-contrast:   darken(@_background, 10%);
@@ -10,27 +11,28 @@
     @background-button:     lighten(desaturate(@_background, 5%), 5%);
     @background-button-hover:lighten(desaturate(@_background, 5%), 2%);
     @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-    @background-odd:        fade(darken(@background-contrast, 3%), 80%);
     @background-input:      lighten(@background-contrast, 10%);
-    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
     @background-selected:   fade(desaturate(@special, 2%), 30%);
     
     @background-scrollbar:          @background;
     @background-scrollbar-thumb:    lighten(@background, 5%);
     @background-scrollbar-thumb-hover: lighten(@background, 10%);
     @background-scrollbar-hover:    darken(@background, 5%);
+    
+    @background-statusbar:      @background-primary;
+    @border-statusbar:          lighten(@background, 5%);
 }
 
 .setVars() when (@dark = 0)
 {
     @_background:           darken(@background, 5%);
+    @background-primary:    darken(@background, 5%);
     
     @foreground-focus:      darken(@foreground, 10%);
     @background-contrast:   darken(@_background, 5%);
     @border:                darken(@_background, 10%);
     @background-button:     lighten(@_background, 10%);
     @background-button-hover:lighten(@_background, 15%);
-    @background-odd:        fade(darken(@background-contrast, 1%), 80%);
     @background-input:      darken(@background-contrast, 10%);
     @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
     @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
@@ -40,6 +42,9 @@
     @background-scrollbar-thumb:    darken(@background, 12%);
     @background-scrollbar-thumb-hover: darken(@background, 20%);
     @background-scrollbar-hover:    darken(@background, 5%);
+    
+    @background-statusbar:      @background-primary;
+    @border-statusbar:          darken(@background, 10%);
 }
 
 .setVars();
@@ -51,8 +56,8 @@
 
 .hud
 {
-    background-image: @background-image !important;
-    background-color: fade(@background-contrast, 90%) !important;
+    background: @background-primary !important;
+    background-image: none !important;
     color: @foreground !important;
     border-color: @border !important;
 
@@ -208,11 +213,11 @@ window:not([view-type="editor"])
 statusbar#statusbarviewbox
 {
     -moz-appearance: none !important;
-    background: @_background !important;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)) !important;
+    background: @background-statusbar !important;
+    background-image: none !important;
     color: fade(@foreground, 80%) !important;
     border: 0 !important;
-    border-top: 1px solid contrast(@_background, darken(@_background, 10%), lighten(@_background, 10%)) !important;
+    border-top: 1px solid @border-statusbar !important;
 
     statusbarpanel
     {
