Skin: Updated the windows skin to fit the new Windows 8 style (first pass)
(integrated from master branch change db805eb by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/chrome/komodo/skin/plat/shared/panes.less
+++ b/src/chrome/komodo/skin/plat/shared/panes.less
@@ -54,7 +54,7 @@ ko-pane tabpanels
             -moz-box-orient: vertical;
             width: 2px;
             padding-left: 2px;
-            border-left: @panel-border;
+            border-left: @main-border;
         }
     }
 
