--- a/src/chrome/komodo/skin/plat/win/_config/window.less
+++ b/src/chrome/komodo/skin/plat/win/_config/window.less
@@ -1,9 +1,9 @@
 @import url("chrome://komodo/skin/plat/shared/_config/window.less");
 
-@panel-border-color:                    ThreeDShadow;
+@panel-border-color:                    Transparent;
 @panel-border:                          1px solid @panel-border-color;
 
-@sidebar-background:                    -moz-dialog -moz-linear-gradient(-90deg , rgba(255,255,255,0) 0%, rgba(0,0,0,0.05) 500px);
+@sidebar-background:                    #FFF;
 @sidebar-inactive-background:           @sidebar-background;
 @sidebar-splitter-color:                rgba(0,0,0,0.2);
 
