--- a/src/chrome/komodo/skin/plat/win/menus.less
+++ b/src/chrome/komodo/skin/plat/win/menus.less
@@ -8,6 +8,11 @@
     {
         padding-top: 0;
         padding-bottom: 0;
+        
+        & > label
+        {
+            text-transform: uppercase;
+        }
     }
 }
 
