--- a/src/chrome/komodo/skin/plat/win/toolbars.less
+++ b/src/chrome/komodo/skin/plat/win/toolbars.less
@@ -35,7 +35,8 @@ toolbarbutton {
 
 #main-toolboxrow
 {
-  padding-bottom: 3px;
+  padding-bottom: 6px;
+  padding-top: 3px;
 
   toolbaritem
   {
@@ -57,4 +58,9 @@ toolbarbutton {
 .widgetToolbarWrap
 {
   padding: 2px 0;
+}
+
+#openToolbar .unified-textbox-wrapper,
+#findToolbar .unified-textbox-wrapper {
+  border-radius: 0 !important;
 }
