--- a/src/chrome/komodo/skin/plat/win/window.less
+++ b/src/chrome/komodo/skin/plat/win/window.less
@@ -1,2 +1,10 @@
 @import url("chrome://komodo/skin/plat/shared/window.less");
 
+view[type="editor"] tabbox > tabpanels,
+#workspace_bottom_area,
+#statusbarviewbox,
+#customizingPlaceHolder
+{
+    border-left: @main-border;
+    border-right: @main-border;
+}
