--- a/src/chrome/komodo/skin/plat/win/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/win/_config/tabs.less
@@ -1,15 +1,16 @@
 @import url("chrome://komodo/skin/plat/shared/_config/tabs.less");
 
 @tab-box-box-shadow:                    none;
-@tab-box-border:                        1px solid rgba(0,0,0,0.3);
-@tab-box-background-color:              Window;
-@tab-box-background-image:              -moz-linear-gradient(90deg , #DEE2E4 0%, #F6F7F8 100%);
-@tab-box-background-image-vertical:     -moz-linear-gradient(180deg , #DEE2E4 0%, #f1f2f3 100%);
-@tab-box-background-icons:              -moz-linear-gradient(90deg , #DEE2E4 0%, #F6F7F8 100%);
-@tab-box-box-shadow-icons:              0px -3px 10px rgba(0,0,0,0.10);
+@tab-box-border:                        1px solid rgba(0,0,0,0.25);
+@tab-box-background-color:              #F5F6F7;
+@tab-box-background-image:              disabled;
+@tab-box-background-image-vertical:     disabled;
+@tab-box-background-icons:              disabled;
+@tab-box-box-shadow-icons:              disabled;
+@tab-box-border-icons:                  1px solid rgba(0,0,0,0.25);
 
 @tab-color:                             ThreeDDarkShadow;
-@tab-text-shadow:                       0 1px 0 rgba(255, 255, 255, 0.5);
+@tab-text-shadow:                       disabled;
 @tab-text-opacity:                      0.7;
 @tab-text-opacity-selected:             1.0;
 
@@ -18,15 +19,15 @@
 @tab-moz-appearance-icons:              none;
 
 @tab-box-shadow:                        none;
-@tab-border:                            1px solid rgba(0,0,0,0.25);
-@tab-border-top:                        3px solid @tab-background;
-@tab-transition:                        all 0.20s linear;
-@tab-background:                        #e5e8ea;
+@tab-border:                            0;
+@tab-border-top:                        0;
+@tab-transition:                        disabled;
+@tab-background:                        #F5F6F7;
 @tab-background-vertical:               @tab-background;
 @tab-box-shadow-vertical:               @tab-box-shadow;
 
-@tab-selected-border:                   @tab-border;
-@tab-selected-border-top:               3px solid #ff9000;
+@tab-selected-border:                   1px solid rgba(0,0,0,0.25);
+@tab-selected-border-top:               1px solid rgba(0,0,0,0.25);
 @tab-selected-background:               rgb(255, 255, 255);
 @tab-selected-box-shadow:               inherit;
 @tab-selected-color:                    WindowText;
@@ -34,7 +35,7 @@
 @tab-selected-box-shadow-vertical:      @tab-selected-box-shadow;
 
 @tab-hover-border:                      @tab-border;
-@tab-hover-border-top:                  3px solid mix(rgba(0, 0, 0, 0.25), #ff9000, 75%);
+@tab-hover-border-top:                  disabled;
 @tab-hover-background:                  rgba(255, 255, 255, 0.5);
 @tab-hover-box-shadow:                  @tab-box-shadow;
 @tab-hover-color:                       inherit;
@@ -42,7 +43,7 @@
 @tab-hover-box-shadow-vertical:         @tab-hover-box-shadow;
 
 @tab-active-border:                     @tab-border;
-@tab-active-border-top:                 3px solid mix(rgba(0, 0, 0, 0.25), #ff9000, 75%);
+@tab-active-border-top:                 disabled;
 @tab-active-background:                 @tab-hover-background;
 @tab-active-box-shadow:                 @tab-box-shadow;
 @tab-active-color:                      inherit;
@@ -51,18 +52,18 @@
 
 @tab-icons-background:                  none;
 @tab-icons-border:                      1px solid transparent;
-@tab-icons-border-radius:               4px;
+@tab-icons-border-radius:               disabled;
 @tab-icons-box-shadow:                  none;
 
-@tab-icons-hover-background:            -moz-linear-gradient(90deg , rgba(100,100,100,0.3) 0%, rgba(200,200,200,0.3) 100%);
-@tab-icons-hover-border:                1px solid rgba(0,0,0, 0.25);
-@tab-icons-hover-border-radius:         4px;
+@tab-icons-hover-background:            disabled;
+@tab-icons-hover-border:                @tab-icons-border;
+@tab-icons-hover-border-radius:         disabled;
 @tab-icons-hover-box-shadow:            none;
 
-@tab-icons-selected-background:         -moz-linear-gradient(90deg , rgba(100,100,100,0.1) 0%, rgba(200,200,200,0.1) 100%);
-@tab-icons-selected-border:             1px solid rgba(0,0,0, 0.40);
-@tab-icons-selected-border-radius:      4px;
-@tab-icons-selected-box-shadow:         inset 0px 1px 5px rgba(0,0,0,0.15);
+@tab-icons-selected-background:         rgb(255, 255, 255);
+@tab-icons-selected-border:             1px solid rgba(0,0,0,0.25);
+@tab-icons-selected-border-radius:      disabled;
+@tab-icons-selected-box-shadow:         disabled;
 
 @tab-icons-selected-opacity:            1.0;
 @tab-icons-unselected-opacity:          1.0;
