--- a/src/chrome/komodo/skin/plat/win/_config/toolbars.less
+++ b/src/chrome/komodo/skin/plat/win/_config/toolbars.less
@@ -1,7 +1,7 @@
 @import url("chrome://komodo/skin/plat/shared/_config/toolbars.less");
 
-@main-toolbox-background:                    -moz-linear-gradient(90deg , rgb(208,214,229) 0%, rgb(243,245,249) 100%);
-@main-toolbox-border-bottom:                 1px solid rgba(0, 0, 0, 0.25);
+@main-toolbox-background:                    #F5F6F7;
+@main-toolbox-border-bottom:                 0;
 
 @main-toolbox-group-first-border-width:      0 1px 0 0;
 @main-toolbox-group-last-border-width:       0 0 0 1px;
@@ -45,5 +45,5 @@
 @main-toolbox-findtoolbar-background:        -moz-Field;
 @main-toolbox-findtoolbar-separator-color:   ThreeDShadow;
 @main-toolbox-findtoolbar-border:            1px solid rgba(142, 142, 142, 0.8);
-@main-toolbox-findtoolbar-shadow:            0px 1px 0px 0px rgba(255, 255, 255, 0.3), 0px 1px 3px 0px rgba(0, 0, 0, 0.2) inset;
-@main-toolbox-findtoolbar-shadow-focus:      0px 0px 3px rgba(72, 144, 196, 0.7), 0px 1px 3px 0px rgba(0, 0, 0, 0.2) inset;
+@main-toolbox-findtoolbar-shadow:            disabled;
+@main-toolbox-findtoolbar-shadow-focus:      disabled;
