Skin: Tweaked the default / gnome skin to look more modern
More flat, less gradients and shadows

(integrated from master branch change a2aca0b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/tabs.less
@@ -4,8 +4,8 @@
 @tab-box-background-color:              Window;
 @tab-box-background-image:              disabled;
 @tab-box-background-image-vertical:     disabled;
-@tab-box-background-icons:              rgba(255,255,255,0.2);
-@tab-box-box-shadow-icons:              0px -3px 10px rgba(0,0,0,0.10);
+@tab-box-background-icons:              Window;
+@tab-box-box-shadow-icons:              disabled;
 @tab-box-border-icons:                  1px solid rgba(0,0,0,0.15);
 @tab-box-content-background-color:      rgba(255,255,255,0.2);
 @tab-box-content-color:                 disabled;
@@ -40,7 +40,7 @@
 @tab-selected-border-top:               disabled;
 @tab-selected-background:               @tab-background;
 @tab-selected-background-inactive:      disabled;
-@tab-selected-box-shadow:               0px 0px 5px rgba(0, 0, 0, 0.35);
+@tab-selected-box-shadow:               disabled;
 @tab-selected-color:                    disabled;
 @tab-selected-background-vertical:      @tab-background-vertical;
 @tab-selected-box-shadow-vertical:      none;
@@ -62,19 +62,19 @@
 @tab-active-box-shadow-vertical:        @tab-active-box-shadow;
 
 @tab-icons-background:                  none;
-@tab-icons-border:                      1px solid transparent;
+@tab-icons-border:                      0;
 @tab-icons-border-radius:               4px;
 @tab-icons-box-shadow:                  none;
 
-@tab-icons-hover-background:            -moz-linear-gradient(90deg , rgba(100,100,100,0.3) 0%, rgba(200,200,200,0.3) 100%);
-@tab-icons-hover-border:                1px solid rgba(0,0,0, 0.25);
+@tab-icons-hover-background:            rgba(255,255,255,0.7);
+@tab-icons-hover-border:                0;
 @tab-icons-hover-border-radius:         4px;
 @tab-icons-hover-box-shadow:            none;
 
-@tab-icons-selected-background:         -moz-linear-gradient(90deg , rgba(100,100,100,0.1) 0%, rgba(200,200,200,0.1) 100%);
-@tab-icons-selected-border:             1px solid rgba(0,0,0, 0.30);
+@tab-icons-selected-background:         -moz-EvenTreeRow;
+@tab-icons-selected-border:             0;
 @tab-icons-selected-border-radius:      4px;
-@tab-icons-selected-box-shadow:         0px 0px 5px rgba(0,0,0, 0.15);
+@tab-icons-selected-box-shadow:         none;
 
 @tab-icons-selected-opacity:            0.9;
-@tab-icons-unselected-opacity:          0.4;
+@tab-icons-unselected-opacity:          0.9;
