--- a/src/chrome/komodo/skin/plat/shared/_config/toolbars.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/toolbars.less
@@ -31,14 +31,14 @@
 @main-toolbox-group-border-color-inactive:   rgba(0,0,0, 0.15);
 @main-toolbox-button-border-color-inactive:  disabled;
 
-@main-toolbox-button-background-color-hover: rgba(0,0,0, 0.07) !important;
+@main-toolbox-button-background-color-hover: rgba(255,255,255, 0.7) !important;
 @main-toolbox-button-background-image-hover: none;
 @main-toolbox-button-shadow-hover:           disabled;
 @main-toolbox-button-border-width-hover:     @main-toolbox-button-border-width;
 @main-toolbox-button-border-style-hover:     @main-toolbox-button-border-style;
 @main-toolbox-button-border-color-hover:     @main-toolbox-button-border-color;
 
-@main-toolbox-button-background-color-active:rgba(0,0,0, 0.10) !important;
+@main-toolbox-button-background-color-active:-moz-EvenTreeRow !important;
 @main-toolbox-button-background-image-active:none;
 @main-toolbox-button-shadow-active:          none;
 @main-toolbox-button-border-width-active:    @main-toolbox-button-border-width;
@@ -47,7 +47,7 @@
 
 @main-toolbox-findtoolbar-color:             -moz-FieldText;
 @main-toolbox-findtoolbar-background:        -moz-Field;
-@main-toolbox-findtoolbar-separator-color:   ThreeDShadow;
-@main-toolbox-findtoolbar-border:            1px solid rgba(142, 142, 142, 0.8);
-@main-toolbox-findtoolbar-shadow:            0px 1px 0px 0px rgba(255, 255, 255, 0.3), 0px 1px 3px 0px rgba(0, 0, 0, 0.2) inset;
-@main-toolbox-findtoolbar-shadow-focus:      0px 0px 3px rgba(0, 0, 0, 0.3), 0px 1px 3px 0px rgba(0, 0, 0, 0.2) inset;
+@main-toolbox-findtoolbar-separator-color:   rgba(142, 142, 142, 0.5);
+@main-toolbox-findtoolbar-border:            1px solid rgba(142, 142, 142, 0.5);
+@main-toolbox-findtoolbar-shadow:            disabled;
+@main-toolbox-findtoolbar-shadow-focus:      disabled;
