--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -9,7 +9,7 @@
 @outset-border:                         disabled;
 @inset-border:                          disabled;
 
-@sidebar-background:                    -moz-linear-gradient(-90deg , rgba(255,255,255,0) 0%, rgba(0,0,0,0.05) 500px);
+@sidebar-background:                    -moz-EvenTreeRow;
 @sidebar-inactive-background:           @sidebar-background;
 
 @bottom-background:                     Window;
