--- a/src/modules/gtk_numix/skin/tabs.less
+++ b/src/modules/gtk_numix/skin/tabs.less
@@ -18,3 +18,9 @@ view tabs:not(.tabs-bottom)
         }
     }
 }
+
+#editorviewbox .tabstrip-box,
+ko-pane[type="horizontal"] .tabstrip-box
+{
+  padding-top: 0 !important;
+}
