--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -288,6 +288,11 @@ statusbarpanel > toolbarbutton[type="menu"] > dropmarker
     list-style-image: @icon-hud-dropmarker !important;
 }
 
+#statusbar-throbber-inner
+{
+    background: @special !important;
+}
+
 #breadcrumbBar .breadcrumb .breadcrumb-arrow
 {
     background-image: @icon-hud-crumb-arrow !important;
