Icons: Update syntax statusbar icons to use icomoon
(integrated from master branch change 3ea2a7c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -419,6 +419,14 @@
 @icon-pref-formatters:          url("@{icon-url-prefix}clear-formatting.svg@{icon-url-suffix}");
 @icon-pref-notify:              url("@{icon-url-prefix}notification2.svg@{icon-url-suffix}");
 
+/**
+ * Syntax checking statusbar images
+ */
+@icon-statusbar-syntax-ok:      url("@{icon-url-prefix}checkmark-circle2.svg@{icon-url-suffix}");
+@icon-statusbar-syntax-inprogress:url("@{icon-url-prefix}busy4.svg@{icon-url-suffix}");
+@icon-statusbar-syntax-warning: url("@{icon-url-prefix}warning2.svg@{icon-url-suffix}");
+@icon-statusbar-syntax-error:   url("@{icon-url-prefix}cancel-circle2.svg@{icon-url-suffix}");
+
 /* Hud Icons */
 
 @icon-hud-new-file:                 url("@{icon-hud-url-prefix}file-plus.svg@{icon-hud-url-suffix}");
@@ -439,3 +447,8 @@
 @icon-hud-findpattern-wildcard:     url("@{icon-hud-url-prefix}power.svg@{icon-hud-url-suffix}");
 @icon-hud-findpattern-regex:        url("@{icon-hud-url-prefix}ko_regexp.svg@{icon-hud-url-suffix}");
 @icon-hud-crumb-arrow:              url("@{icon-hud-url-prefix}arrow-right3.svg@{icon-hud-url-suffix}");
+
+@icon-hud-statusbar-syntax-ok:      url("@{icon-hud-url-prefix}checkmark.svg@{icon-hud-url-suffix}");
+@icon-hud-statusbar-syntax-inprogress:url("@{icon-hud-url-prefix}busy4.svg@{icon-hud-url-suffix}");
+@icon-hud-statusbar-syntax-warning: url("@{icon-hud-url-prefix}warning2.svg@{icon-hud-url-suffix}");
+@icon-hud-statusbar-syntax-error:   url("@{icon-hud-url-prefix}cancel-circle2.svg@{icon-hud-url-suffix}");
