Commando: Indicate results are dirty by fading out dirty results
(integrated from master branch change 123a3bb by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -147,6 +147,11 @@
         background: transparent !important;
         border: 0;
         margin: 0;
+        
+        &[dirty]
+        {
+            opacity: 0.5;
+        }
 
         &:not(.has-results)
         {
