--- a/src/chrome/komodo/skin/plat/mac/panes.less
+++ b/src/chrome/komodo/skin/plat/mac/panes.less
@@ -9,3 +9,8 @@
         margin-top: -2px;
     }
 }
+
+#workspace_left_area, #workspace_right_area
+{
+    -moz-appearance: -moz-mac-vibrancy-light !important;
+}
