skin: Add back in sidebar color for numix
(integrated from master branch change c030424 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/gtk_numix/skin/_config/window.less
+++ b/src/modules/gtk_numix/skin/_config/window.less
@@ -1,3 +1,6 @@
 @import url("chrome://komodo/skin/plat/current/_config/window.less");
 
 @main-toolbox-appearance:               none;
+
+@sidebar-background: #DEDEDE;
+@sidebar-inactive-background: @sidebar-background;
