Commando: Fix load position (stop results from jumping a few pixels)
(integrated from master branch change 97bd515 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -100,7 +100,7 @@
         }
     }
 
-    .loader
+    #commando-panel:not(.kitt) .loader
     {
         background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, @special 200px, @special 300px, rgba(0,0,0,0.0) 500px) !important;
     }
