Skin: Tweak preference screen sidebar tree row size/padding
(integrated from master branch change ab18c90 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -11,14 +11,24 @@
 
     treechildren::-moz-tree-row
     {
-        height: 30px;
+        height: 26px;
     }
 
     treechildren::-moz-tree-cell-text
     {
-        font-size: 1.1rem;
         font-weight: bold;
         padding-left: 28px;
+    }
+    
+    treechildren::-moz-tree-cell-text(child-row)
+    {
+        padding-left: 8px;
+        font-weight: normal;
+    }
+    
+    treechildren::-moz-tree-twisty(child-row)
+    {
+        margin-left: 5px !important;
     }
 
     treechildren::-moz-tree-cell
