Skin: Consistently style pref window trees
(integrated from master branch change c62707f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -189,3 +189,29 @@
     }
 
 }
+
+#prefProjectsWindow
+{
+    treecols
+    {
+        height: 0px;
+        overflow: hidden;
+    }
+
+    treechildren::-moz-tree-row
+    {
+        height: 26px;
+    }
+
+    treechildren::-moz-tree-cell-text
+    {
+        font-weight: bold;
+        padding-left: 4px;
+    }
+    
+    treechildren::-moz-tree-cell-text(child-row)
+    {
+        font-weight: normal;
+    }
+    
+}
