skin: Add foreground color in editor
(integrated from master branch change 0e14c52 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -91,6 +91,7 @@
     {
         -moz-appearance: none !important;
         background-color: @hud-selection-background !important;
+        color: @hud-selection-foreground;
         border: 0;
 
         & > hbox
